# cross-system-analytics

./: .env.example  .gitignore  ENGINEERING_PLAN.md  Makefile  PRODUCT_PLAN.md  README.md  docker-compose.yml
avail/: pyproject.toml
avail/fastbridge/: README.md
avail/fastbridge/attribution/: engine.py
avail/gtm/: README.md
avail/gtm/scoring/: engine.py
avail/nexus_cs/: README.md
avail/nexus_cs/heuristics/: engine.py
core/: __init__.py  pyproject.toml
core/adapters/: base.py
core/adapters/dummy/: __init__.py
core/adapters/evm/: __init__.py  multi.py  registry.py
core/adapters/ga4/: __init__.py
core/adapters/posthog/: __init__.py
core/adapters/prices/: coingecko.py
core/demo/: unified_funnel.py
core/enrichment/: __init__.py  enrich.py  metadata.py  prices.py
core/identity/: bridge_links.py  graph.py  pipeline.py  resolvers.py
core/schemas/: bridge_links.sql  canonical_events.sql  canonical_logs.sql  entity_relationships.sql  registry.yaml  token_metadata.sql  token_prices.sql  validator.py
core/sink/: __init__.py  clickhouse.py
core/tests/extensibility/: test_schema_extensibility.py
core/tests/fake_integrator/: test_web2_trajectory.py
core/tests/standalone/: test_bridge_decoders.py  test_bridge_link_pipeline.py  test_bridge_links.py  test_clickhouse_sink.py  test_core_standalone.py  test_enrichment.py  test_evm_adapter.py  test_full_logs.py  test_ga4_adapter.py  test_identity_graph.py  test_multi_chain.py  test_posthog_adapter.py  test_resolution_pipeline.py  test_standalone.py  test_unified_funnel.py  (+1 more)
core/trajectory/: engine.py
(+20 files in other folders)
