[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-avail"
version = "0.1.0"
description = "Avail-specific surfaces for Nexus Analytics"
requires-python = ">=3.11"
dependencies = [
    "nexus-core",
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
